# django-notifications-community

./: .gitignore  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  manage.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
notifications/: __init__.py  admin.py  apps.py  helpers.py  models.py  registry.py  settings.py  signals.py  swappable.py  urls.py  utils.py  views.py
notifications/base/: admin.py  models.py
notifications/migrations/: 0001_initial.py  0002_auto_20150224_1134.py  0003_notification_data.py  0004_auto_20150826_1508.py  0005_auto_20160504_1520.py  0007_add_timestamp_index.py  0009_alter_notification_options_and_more.py  0011_replace_jsonfield_with_native.py  0012_gfk_indexes.py  0013_alter_notification_level.py  0013_squashed_recipient_unread_index.py
notifications/static/notifications/: notify.js
notifications/templates/notifications/: notice.html
notifications/templatetags/: notifications_tags.py
notifications/tests/: settings.py  tests.py  urls.py  views.py
notifications/tests/sample_notifications/: admin.py  apps.py  models.py  tests.py
notifications/tests/sample_notifications/migrations/: 0001_initial.py
notifications/tests/sample_notifications/templatetags/: notifications_tags.py
notifications/tests/test_models/migrations/: 0001_initial.py
