[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-notifications-community"
dynamic = ["version"]
description = "GitHub notifications alike app for Django (community fork)."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
keywords = ["django", "notifications", "github", "action", "event", "stream"]
authors = [
    { name = "django-notifications team" },
]
maintainers = [
    { name = "django-notifications-community contributors" },
]
dependencies = [
    "django>=5.2,<6.3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.optional-dependencies]
sites = [
    "django-notifications-community-sites>=1.0",
]

[project.urls]
Homepage = "https://github.com/django-notifications-community/django-notifications-community"
Source = "https://github.com/django-notifications-community/django-notifications-community"
Issues = "https://github.com/django-notifications-community/django-notifications-community/issues"
Changelog = "https://github.com/django-notifications-community/django-notifications-community/blob/master/CHANGELOG.md"
Upstream = "https://github.com/django-notifications/django-notifications"

[tool.setuptools_scm]
# Empty config = defaults. setuptools-scm will read the version from the
# nearest git tag (stripping the leading "v"), append a dev suffix for
# untagged commits, and use fallback_version outside a git checkout.
fallback_version = "0.0.0+unknown"

[tool.setuptools.packages.find]
include = ["notifications*"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear
    "DJ",    # flake8-django
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "D300",  # triple double-quoted strings for docstrings
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "PERF",  # perflint
]
ignore = [
    "SIM108",  # ternary-over-if-else: often hurts readability
    "PERF203", # try-except-in-loop: noisy, frequent false positives
    "RUF001",  # ambiguous unicode: collides with gettext strings
    "RUF012",  # mutable class defaults: clashes with Django Meta/Admin idioms
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["notifications"]
